--- a/workflow/configs/post.config
+++ b/workflow/configs/post.config
@@ -1,7 +1,7 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-1",
-"nodeType"  : "t3.xlarge",
+"nodeType"  : "t3.2xlarge",
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
