updates and fixes for quasiops runs

--- a/workflow/configs/post.config
+++ b/workflow/configs/post.config
@@ -1,12 +1,12 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-1",
-"nodeType"  : "t3.xlarge",
+"nodeType"  : "t3.2xlarge",
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "ofs plotting" }
+                { "Key": "NAME", "Value": "nosofs plotting" }
               ],
 "image_id"  : "ami-0c9d9d7cb44764792",
 "key_name"  : "patrick-ioos-cloud-sandbox",
