--- a/cloudflow/cluster/configs/adnoc.config
+++ b/cloudflow/cluster/configs/adnoc.config
@@ -1,16 +1,16 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-1",
-"nodeType"  : "c5.2xlarge",
+"nodeType"  : "c5.9xlarge",
 "nodeCount" :  1,
 "tags"      : [ 
-                { "Key": "Name", "Value": "ADNOC-forecast-test" },
+                { "Key": "Name", "Value": "ADNOC-forecast" },
                 { "Key": "NAME", "Value": "adnoc-fcst" },
                 { "Key": "Project", "Value": "ADNOC" }
               ],
-"image_id"  : "ami-0323e3df2ae5c3b40",
+"image_id"  : "ami-01f7b31e6a631b859",
 "key_name"  : "forecasting",
-"sg_ids"    : ["sg-9ff456fb", "sg-073fcfb0ab31a1d62", "sg-0be4b790c21c59ee3"],
+"sg_ids"    : ["sg-9ff456fb", "sg-0b82904b0c646072d"],
 "subnet_id" : "subnet-f19221a8",
 "placement_group" : "ADNOC-cluster-placement"
 }
