fixes, model runs

--- a/cloudflow/job/templates/liveocean.ocean.in
+++ b/cloudflow/job/templates/liveocean.ocean.in
@@ -101,6 +101,7 @@ GridsInLayer =  1
      NDTFAST == 20
 
 ! NHours * 3600 (seconds) / DT = NTIMES
+! NHOURS = NTIMES * DT / 3600
 
 ! Model iteration loops parameters.
 
