wrfroms generalized parameters working

--- a/cloudflow/cluster/configs/wrfroms.config
+++ b/cloudflow/cluster/configs/wrfroms.config
@@ -1,8 +1,8 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-1",
-"nodeType"  : "c5.12xlarge",
-"nodeCount" : 1,
+"nodeType"  : "c5n.18xlarge",
+"nodeCount" : 2,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox wrf/roms fcst" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
