--- a/cloudflow/job/templates/liveocean.ocean.in
+++ b/cloudflow/job/templates/liveocean.ocean.in
@@ -11,7 +11,7 @@
 
 ! Application title.
 
-       TITLE = First LiveOcean input file
+       TITLE = LiveOcean Forecast - IOOS Cloud Sandbox
 
 ! C-preprocessing Flag.
 
