--- a/cloudflow/job/templates/dbofs.ocean.in
+++ b/cloudflow/job/templates/dbofs.ocean.in
@@ -63,7 +63,9 @@
 !==============================================================================                                                                                                                         
 !                                                                                                                                                                                                       
 ! Application title.                                                                                                                                                                                    
-     TITLE = dbofs forecast RUN in operational mode
+     !TITLE = dbofs forecast RUN in operational mode
+     TITLE = Delaware Bay Operational Forecast System (DBOFS) - IOOS Cloud Sandbox
+
 ! C-preprocessing Flag.                                                                                                                                                                                 
      MyAppCPP = dbofs forecast RUN in operational mode
 ! Input variable information file name.  This file needs to be processed                                                                                                                                
