--- a/cloudflow/job/templates/lmhofs.fcst.in
+++ b/cloudflow/job/templates/lmhofs.fcst.in
@@ -16,7 +16,7 @@
  !======Copyright 1998, Regents of University of Minnesota========!
 
  &NML_CASE
- CASE_TITLE      = 'LMHOFS',
+ CASE_TITLE      = 'Lake Michigan and Huron Operational Forecast System (LMHOFS) - IOOS Cloud Sandbox',
  TIMEZONE        = 'UTC',
  DATE_FORMAT     = 'YMD',
  DATE_REFERENCE  = '__DATE_REFERENCE__',
