--- a/cloudflow/job/templates/nwgofs.fcst.in
+++ b/cloudflow/job/templates/nwgofs.fcst.in
@@ -12,7 +12,7 @@
  !======Copyright 1998, Regents of University of Minnesota========!
  !                                                                !
  &NML_CASE
- CASE_TITLE      = 'NWGOFS',
+ CASE_TITLE      = 'Northern Gulf of Mexico Operational Forecast System (NWGOFS) - IOOS Cloud Sandbox',
  TIMEZONE        = 'UTC',
  DATE_FORMAT     = 'YMD',
  DATE_REFERENCE  = '__DATE_REFERENCE__',
