--- a/cloudflow/job/templates/tbofs.ocean.in
+++ b/cloudflow/job/templates/tbofs.ocean.in
@@ -64,7 +64,8 @@
 !                                                                                                                                                                                                       
 ! Application title.                                                                                                                                                                                    
      !TITLE = tbofs forecast RUN in operational mode
-     TITLE = Tampa Bay Operational Forecast System (TBOFS) - IOOS Cloud Sandbox
+     !TITLE = Tampa Bay Operational Forecast System (TBOFS) - IOOS Cloud Sandbox
+     TITLE = Tampa Bay OFS (TBOFS) - IOOS Cloud Sandbox
 ! C-preprocessing Flag.                                                                                                                                                                                 
      MyAppCPP = tbofs forecast RUN in operational mode
 ! Input variable information file name.  This file needs to be processed                                                                                                                                
