--- a/cloudflow/job/templates/ciofs.ocean.in
+++ b/cloudflow/job/templates/ciofs.ocean.in
@@ -63,7 +63,10 @@
 !==============================================================================                                                                                                                         
 !                                                                                                                                                                                                       
 ! Application title.                                                                                                                                                                                    
-     TITLE = ciofs forecast RUN in operational mode
+     !TITLE = ciofs forecast RUN in operational mode
+     !TITLE = Cook Inlet Operational Forecast System (CIOFS) - IOOS Cloud Sandbox
+     TITLE = Cook Inlet OFS (CIOFS) - IOOS Cloud Sandbox
+
 ! C-preprocessing Flag.                                                                                                                                                                                 
      MyAppCPP = ciofs forecast RUN in operational mode
 ! Input variable information file name.  This file needs to be processed                                                                                                                                
