update from master

--- a/cloudflow/cluster/configs/ioos.config
+++ b/cloudflow/cluster/configs/ioos.config
@@ -2,9 +2,9 @@
 "platform"  : "AWS",
 "region"    : "us-east-1",
 "nodeType"  : "c5n.18xlarge",
-"nodeCount" : 4,
+"nodeCount" : 1,
 "tags"      : [ 
-                { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
+                { "Key": "Name", "Value": "IOOS-sandbox-mmonim" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "IOOS forecast" }
               ],
