--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ workflow/venv/
 dist/
 docs/build/
 cloudflow/notebooks/docs/
+terraform/.terraform/
+terraform/terraform-notes.txt
+terraform/terraform.tfstate
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate.backup
+terraform/.terraform.tfstate.lock.info
