fixes from test run

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ terraform/terraform.tfstate
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.backup
 terraform/.terraform.tfstate.lock.info
+terraform/SAVE.mysettings.tfvars
