fixed ami creation

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.backup
 terraform/.terraform.tfstate.lock.info
 terraform/SAVE.mysettings.tfvars
+*/.secret
