fix install_python_modules pip update

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,7 @@ terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.backup
 terraform/.terraform.tfstate.lock.info
 terraform/SAVE.mysettings.tfvars
+*.pem
+*.key
 */.secret
 **/*nda*
