--- a/cloudflow/workflows/scripts/slurm.conf
+++ b/cloudflow/workflows/scripts/slurm.conf
@@ -1,11 +1,6 @@
 # Put this file on all nodes of your cluster.
 # See the slurm.conf man page for more information.
 
-#ControlMachine=localhost
-#ControlAddr=127.0.0.1
-#CryptoType=crypto/munge
-
-
 ClusterName=ioos-cloud-hpc
 SlurmctldHost=localhost
 
@@ -26,7 +21,7 @@ SlurmdPort=6818
 SlurmdSpoolDir=/var/spool/slurmd
 
 SlurmUser=slurm
-StateSaveLocation=/var/spool/slurm.state
+StateSaveLocation=/var/spool/slurm/slurm.state
 SwitchType=switch/none
 TaskPlugin=task/affinity,task/cgroup
 
@@ -46,7 +41,7 @@ Waittime=0
 # SCHEDULING
 SchedulerType=sched/builtin
 SelectType=select/linear
-SelectTypeParameters=CR_CPU
+#SelectTypeParameters=CR_CPU
 
 # Parallel Cluster
 #SchedulerType	sched/backfill
@@ -61,19 +56,21 @@ SelectTypeParameters=CR_CPU
 #AccountingStorageHost=
 #AccountingStoragePass=
 #AccountingStoragePort=
-AccountingStorageType=accounting_storage/slurmdbd
+
+#PT AccountingStorageType=accounting_storage/slurmdbd
+
 #AccountingStorageUser=
-AccountingStoreJobComment=YES
+#PT AccountingStoreJobComment=YES
 #AccountingStoreFlags=
 #JobCompHost=
 #JobCompLoc=
 #JobCompPass=
 #JobCompPort=
-JobCompType=jobcomp/mysql
+#PT JobCompType=jobcomp/mysql
 #JobCompUser=
 #JobContainerType=job_container/none
-JobAcctGatherFrequency=30
-JobAcctGatherType=jobacct_gather/cgroup
+#PT JobAcctGatherFrequency=30
+#PT JobAcctGatherType=jobacct_gather/cgroup
 
 SlurmctldDebug=info
 SlurmctldLogFile=/var/log/slurmctld.log
@@ -97,7 +94,10 @@ ResumeTimeout=1800
 
 
 # COMPUTE NODES
-NodeName=hpc-t2micro-[1-2] CPUs=1 State=CLOUD Feature=dynamic,t2.micro
+NodeName=ip-10-0-0-75 CPUs=2 State=CLOUD Feature=dynamic,t3.medium
+# NodeAddr=10.0.0.75 
 
-NodeSet=hpc-t2micro-[1-2]
-PartitionName=hpc Nodes=hpc_nodes Default=YES MaxTime=INFINITE State=UP
+NodeSet=test Nodes=ip-10-0-0-75
+
+# Partition (Queue) settings
+PartitionName=test Nodes=test Default=YES MaxTime=INFINITE State=UP
