--- a/cloudflow/cluster/configs/ioos.config
+++ b/cloudflow/cluster/configs/ioos.config
@@ -6,11 +6,12 @@
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "IOOS forecast" }
+                { "Key": "NAME", "Value": "nosofs-fcst" },
+                { "Key": "Classification", "Value": "DMZ Production" }
               ],
-"image_id"  : "ami-052f3e9220b9961dc",
+"image_id"  : "ami-032517fbd12604cb1",
 "key_name"  : "patrick-ioos-cloud-sandbox",
-"sg_ids"    : ["sg-006041073bfa7b072", "sg-0a48755f7b926b051", "sg-04a6bcecaec589f64"],
-"subnet_id" : "subnet-050093b957519d622",
+"sg_ids"    : ["sg-0af7b6ac21dfbda12", "sg-0d5d29832f98cc75f", "sg-0f16ccd7d5491e0fe"],
+"subnet_id" : "subnet-ad6f1e82",
 "placement_group" : "IOOS-cloud-sandbox-cluster-placement-group"
 }
