slurm config for compute and head node

--- a/cloudflow/workflows/scripts/system/slurmctld.service.in
+++ b/cloudflow/workflows/scripts/system/slurmctld.service.in
@@ -8,10 +8,13 @@ ConditionPathExists=@sysconfdir@/slurm.conf
 Type=simple
 EnvironmentFile=-/etc/sysconfig/slurmctld
 EnvironmentFile=-/etc/default/slurmctld
+
 ExecStart=@sbindir@/slurmctld -D -s $SLURMCTLD_OPTIONS
+
 ExecReload=/bin/kill -HUP $MAINPID
 LimitNOFILE=65536
-@SYSTEMD_TASKSMAX_OPTION@
+
+# @SYSTEMD_TASKSMAX_OPTION@
 
 # Uncomment the following lines to disable logging through journald.
 # NOTE: It may be preferable to set these through an override file instead.
