--- a/jupyterhub/default.conf
+++ b/jupyterhub/default.conf
@@ -1,3 +1,8 @@
+   map $http_upgrade $connection_upgrade {
+   default upgrade;
+   ''      close;
+}
+
 server {
     listen 80;
     server_name jupyterhub.rpsgroup.com;
@@ -21,7 +26,11 @@ server {
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
-
+         
+       # enable WebSockets
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection $connection_upgrade;
     #    root   /usr/share/nginx/html;
     #    index  index.html index.htm;
     }
