--- a/cloudflow/workflows/scripts/system/jupyterhub.service
+++ b/cloudflow/workflows/scripts/system/jupyterhub.service
@@ -3,9 +3,11 @@ Description=JupyterHub
 After=syslog.target network.target
 
 [Service]
+#User=jupyter
 User=root
-Environment="PATH=/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/opt/jupyterhub/bin:/usr/local/lib/nodejs/node-v16.15.0-linux-x64/bin"
+Environment="PATH=/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/opt/jupyterhub/bin"
 ExecStart=/opt/jupyterhub/bin/jupyterhub -f /opt/jupyterhub/jupyterhub_config.py
+PIDFile=/opt/jupyterhub/jupyterhub.pid
 
 [Install]
 WantedBy=multi-user.target
