slurm config errors

--- a/cloudflow/workflows/scripts/slurm.conf
+++ b/cloudflow/workflows/scripts/slurm.conf
@@ -5,8 +5,8 @@ ClusterName=ioos-cloud-hpc
 SlurmctldHost=localhost
 
 AuthType=auth/munge
-CacheGroups=0                        # pc only
-CommunicationParameters=NoAddrCache  # pc only
+#CacheGroups=0                        # pc only
+#CommunicationParameters=NoAddrCache  # pc only
 PrivateData=cloud
 
 EnforcePartLimits=ALL
@@ -81,19 +81,18 @@ SlurmdLogFile=/var/log/slurmd.log
 
 
 # POWER SAVE SUPPORT FOR IDLE NODES (optional)
-SuspendProgram=/opt/parallelcluster/scripts/slurm/slurm_suspend
-SuspendRate=0
-SuspendTime=600
-SuspendTimeout=120
+## SuspendProgram=/opt/parallelcluster/scripts/slurm/slurm_suspend
+## SuspendRate=0
+## SuspendTime=600
+## SuspendTimeout=120
 
-ReconfigFlags=KeepPartState  # pc only
-ResumeFailProgram=/opt/parallelcluster/scripts/slurm/slurm_suspend  # pc only
-ResumeProgram=/opt/parallelcluster/scripts/slurm/slurm_resume
-ResumeRate=0
-ResumeTimeout=1800
+## ReconfigFlags=KeepPartState  # pc only
+## ResumeFailProgram=/opt/parallelcluster/scripts/slurm/slurm_suspend  # pc only
+## ResumeProgram=/opt/parallelcluster/scripts/slurm/slurm_resume
+## ResumeRate=0
+## ResumeTimeout=1800
 
-
-# COMPUTE NODES
+# COMPUTE NODES - # FAKE FOR NOW
 NodeName=ip-10-0-0-75 CPUs=2 State=CLOUD Feature=dynamic,t3.medium
 # NodeAddr=10.0.0.75 
 
