--- a/cloudflow/cluster/configs/nosofs.config
+++ b/cloudflow/cluster/configs/nosofs.config
@@ -1,16 +1,20 @@
 {
 "platform"  : "AWS",
-"region"    : "us-east-1",
+"region"    : "us-east-2",
 "nodeType"  : "c5n.18xlarge",
-"nodeCount" : 4,
+"nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "nosofs-fcst" }
               ],
-"image_id"  : "ami-032517fbd12604cb1",
-"key_name"  : "patrick-ioos-cloud-sandbox",
-"sg_ids"    : ["sg-0af7b6ac21dfbda12", "sg-0d5d29832f98cc75f", "sg-0f16ccd7d5491e0fe"],
-"subnet_id" : "subnet-ad6f1e82",
-"placement_group" : "IOOS-cloud-sandbox-cluster-placement-group"
+"image_id"  : "ami-076b2467dfd17d05e",
+"key_name"  : "ioos-sandbox",
+"sg_ids"    :  [
+  "sg-097de0758bfa9f7ad",
+  "sg-0df5c7be2a3a1ac6a",
+  "sg-00154dc46495d6e51",
+],
+"subnet_id" : "subnet-0b362737f7ccf430c",
+"placement_group" : "Patrick-ioos-cloud-sandbox_Terraform_Placement_Group"
 }
