ROMS works on intel cores

--- a/cloudflow/cluster/configs/ioos.config
+++ b/cloudflow/cluster/configs/ioos.config
@@ -1,18 +1,20 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-2",
-"nodeType"  : "hpc6a.48xlarge",
+"nodeType"  : "c5n.18xlarge",
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "nosofs-fcst" }
               ],
-"image_id"  : "ami-076b2467dfd17d05e",
+"image_id"  : "ami-0c5d6c87075ac332a",
 "key_name"  : "ioos-sandbox",
-"sg_ids"    :  [ "sg-097de0758bfa9f7ad", 
-                 "sg-0df5c7be2a3a1ac6a", 
-                 "sg-00154dc46495d6e51" ],
-"subnet_id" : "subnet-0b362737f7ccf430c",
+"sg_ids"    : [
+  "sg-03e4479bc61057a30",
+  "sg-07588b4230c8e29b0",
+  "sg-03b2af1315a3fc526"
+  ],
+"subnet_id" : "subnet-08689a3c6a43e807d",
 "placement_group" : "Patrick-ioos-cloud-sandbox_Terraform_Placement_Group"
 }
