--- a/cloudflow/workflows/scripts/system/jupyterhub.service
+++ b/cloudflow/workflows/scripts/system/jupyterhub.service
@@ -3,11 +3,13 @@ Description=JupyterHub
 After=syslog.target network.target
 
 [Service]
-#User=jupyter
-User=root
-Environment="PATH=/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/opt/jupyterhub/bin"
-ExecStart=/opt/jupyterhub/bin/jupyterhub -f /opt/jupyterhub/jupyterhub_config.py
-PIDFile=/opt/jupyterhub/jupyterhub.pid
+Type=simple
+User=jupyter
+ExecStart=/etc/jupyterhub/runJupyterhub.sh
+WorkingDirectory=/etc/jupyterhub
+Restart=on-failure
+RestartSec=1min
+TimeoutSec=5min
 
 [Install]
 WantedBy=multi-user.target
