Updated nginx config, installation, and instructions.

--- a/cloudflow/workflows/scripts/system/jupyterhub.conf
+++ b/cloudflow/workflows/scripts/system/jupyterhub.conf
@@ -6,16 +6,16 @@ map $http_upgrade $connection_upgrade {
 server {
 
     listen       80;
-    server_name jupyterhub.rpsgroup.com;
-    return 301 https://jupyterhub.rpsgroup.com$request_uri;
+    server_name sandbox-dev.ioos.us;
+    return 301 https://sandbox-dev.ioos.us$request_uri;
 }
 
 server {
 
     listen   443 ssl;
-    ssl_certificate        /etc/ssl/star_rpsgroup_com.crt;
-    ssl_certificate_key    /etc/ssl/star_rpsgroup_com.key;
-    server_name  jupyterhub.rpsgroup.com;
+    ssl_certificate        /etc/ssl/star_ioos_us.crt;
+    ssl_certificate_key    /etc/ssl/star_ioos_us.key;
+    server_name  sandbox-dev.ioos.us;
 
     location / {
 
