--- a/cloudflow/cluster/configs/ioos.config
+++ b/cloudflow/cluster/configs/ioos.config
@@ -4,7 +4,7 @@
 "nodeType"  : "c5n.18xlarge",
 "nodeCount" : 1,
 "tags"      : [ 
-                { "Key": "Name", "Value": "IOOS-sandbox-mmonim" },
+                { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "nosofs-fcst" }
               ],
