--- a/cloudflow/workflows/scripts/system/munge.service.in
+++ b/cloudflow/workflows/scripts/system/munge.service.in
@@ -7,7 +7,8 @@ After=time-sync.target
 
 [Service]
 Type=forking
-ExecStart=@sbindir@/munged --key-file=/etc/munge/munge.key
+ExecStart=@sbindir@/munged --socket /run/munge/munge.socket.2 --key-file=/etc/munge/munge.key
+PIDFile=/run/munge/munged.pid
 User=munge
 Group=munge
 Restart=on-abort
