Created script for remote S3 state backend. Updated gitignore to ignore all temp Terraform files.

--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,11 @@ workflow/venv/
 dist/
 docs/build/
 cloudflow/notebooks/docs/
-terraform/.terraform/
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+*.lock.*
 terraform/terraform-notes.txt
-terraform/terraform.tfstate
-terraform/.terraform.lock.hcl
-terraform/terraform.tfstate.backup
-terraform/.terraform.tfstate.lock.info
 terraform/SAVE.mysettings.tfvars
 *.pem
 *.key
