--- a/cloudflow/cluster/configs/ioos.c5n.config
+++ b/cloudflow/cluster/configs/ioos.c5n.config
@@ -1,7 +1,7 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-2",
-"nodeType"  : "hpc6a.48xlarge",
+"nodeType"  : "c5n.18xlarge",
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
