--- a/cloudflow/cluster/configs/ioos.amd.config
+++ b/cloudflow/cluster/configs/ioos.amd.config
@@ -1,14 +1,14 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-2",
-"nodeType"  : "c5n.18xlarge",
+"nodeType"  : "hpc6a.48xlarge",
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "nosofs-fcst" }
               ],
-"image_id"  : "ami-052928467e84be78c",
+"image_id"  : "ami-085591407d6dd69bf",
 "key_name"  : "ioos-sandbox",
 "sg_ids"    : [
   "sg-03e4479bc61057a30",
