--- a/cloudflow/cluster/configs/ioos.config
+++ b/cloudflow/cluster/configs/ioos.config
@@ -1,20 +1,20 @@
 {
 "platform"  : "AWS",
 "region"    : "us-east-2",
-"nodeType"  : "c5n.18xlarge",
-"nodeCount" : 1,
+"nodeType"  : "hpc6a.48xlarge",
+"nodeCount" : 2,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "nosofs-fcst" }
               ],
-"image_id"  : "ami-052928467e84be78c",
+"image_id"  : "ami-0c365ffaf98a6c4e9",
 "key_name"  : "ioos-sandbox",
 "sg_ids"    : [
-  "sg-03e4479bc61057a30",
-  "sg-07588b4230c8e29b0",
-  "sg-03b2af1315a3fc526"
+  "sg-0c72b9cd2d5143515",
+  "sg-0fd05da3e3474d0e1",
+  "sg-05d4f1d9145a6666b"
   ],
-"subnet_id" : "subnet-08689a3c6a43e807d",
-"placement_group" : "Patrick-ioos-cloud-sandbox_Terraform_Placement_Group"
+"subnet_id" : "subnet-0b78841b900162b6c",
+"placement_group" : "Patrick-x86_64-sandbox_Terraform_Placement_Group"
 }
