--- a/.github/ISSUE_TEMPLATE/sandbox_user_request.yml
+++ b/.github/ISSUE_TEMPLATE/sandbox_user_request.yml
@@ -32,7 +32,7 @@ body:
 - type: markdown
   attributes:
     value: "## Please provide a brief description of your project and what you would like to accomplish in the Coastal Sandbox"
-- type: input
+- type: textarea
   id: project_desc
   attributes:
     label: Sandbox Project Description
