--- a/cloudflow/job/templates/submit.cloudflow.template
+++ b/cloudflow/job/templates/submit.cloudflow.template
@@ -6,7 +6,6 @@ cd $RUNDIR
 echo "PWD: $PWD"
 
 PHOME=<ProjectHome>
-# cd $PHOME
 
 DATETIME=`date +'%Y-%h-%d-T%H:%M:%S'`
 echo "${DATETIME}" > run.start
@@ -42,8 +41,8 @@ mpirun $MPIOPTS $PHOME/<ModelName> <WriterCores>
 ERROVALUE=$?
 if [ $ERROVALUE == 0 ] ; then
    RUNSUFFIX="complete"
-   #cp PE0000/fort.6{7,8}* .
-   #rm -rf PE* metis* part* fort.80 rads.64.nc fort.90.nc
+   cp PE0000/fort.6{7,8}* .
+   rm -rf PE* metis* part* fort.80 rads.64.nc fort.90.nc
 else
    RUNSUFFIX="failed"
 fi
