cora tests pass

--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,14 @@
 tmp
 *.egg-info/
 .ipynb_checkpoints
-worflow/*.ipynb
+**/*.ipynb
 .pytest_cache/
-workflow/dist
-workflow/*.out
+cloudflow/*.out
+cloudflow/*.log
 **/worker-*.dirlock
 **/purge.lock
 **/global.lock
-workflow/workflows/lo.out
 .idea/
-workflow/.idea/
-workflow/venv/
 .eggs/
 dist/
 docs/build/
