--- a/cloudflow/cluster/configs/ioos.nosofs.config
+++ b/cloudflow/cluster/configs/ioos.nosofs.config
@@ -2,19 +2,15 @@
 "platform"  : "AWS",
 "region"    : "us-east-2",
 "nodeType"  : "hpc6a.48xlarge",
-"nodeCount" : 2,
+"nodeCount" : 8,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "nosofs-fcst" }
               ],
-"image_id"  : "ami-0a4b30237fee5d223",
+"image_id"  : "ami-07d0aa6a6ac23d33a",
 "key_name"  : "ioos-sandbox",
-"sg_ids"    : [
-  "sg-0810cdb0357f0a92c",
-  "sg-058243450eb3b4308",
-  "sg-0b2a044dad6a21156"
-  ],
-"subnet_id" : "subnet-0a83f73406e809b00",
-"placement_group" : "Patrick-x86_64-sandbox_Terraform_Placement_Group"
+"sg_ids"    :  [ "sg-054f4248a8fc54750", "sg-0c9bb98732e936e66", "sg-0ce1abfe87363d80b" ],
+"subnet_id" : "subnet-04b0eef9cb8015d31",
+"placement_group" : "ioos_cloud_sandbox-us-east-2b_Terraform_Placement_Group"
 }
