lo workflow updates and testing

--- a/cloudflow/cluster/configs/NOS/noaa.cora.config
+++ b/cloudflow/cluster/configs/NOS/noaa.cora.config
@@ -8,9 +8,9 @@
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
                 { "Key": "NAME", "Value": "liveocean-fcst" }
               ],
-"image_id"  : "ami-07d0aa6a6ac23d33a",
-"key_name"  : "ioos-sandbox",
-"sg_ids"    :  [ "sg-054f4248a8fc54750", "sg-0c9bb98732e936e66", "sg-0ce1abfe87363d80b" ],
-"subnet_id" : "subnet-04b0eef9cb8015d31",
-"placement_group" : "ioos_cloud_sandbox-us-east-2b_Terraform_Placement_Group"
+"image_id"  : "ami-082e2e4e7ef1c6d77",
+"key_name"  : "rsa_sandbox_key",
+"sg_ids"    : ["sg-05c044182398b2a27", "sg-0e5148638d9196f69", "sg-06ca6bc5d4b377dad"],
+"subnet_id" : "subnet-00075cfbfcbc8f2cf",
+"placement_group" : "ioos_cloud_sandbox_Terraform_Placement_Group"
 }
