removed NAME tag from nos cluster configs

--- a/cloudflow/cluster/configs/NOS/nos.liveocean.cfg
+++ b/cloudflow/cluster/configs/NOS/nos.liveocean.cfg
@@ -4,9 +4,8 @@
 "nodeType"  : "r7iz.32xlarge",
 "nodeCount" : 4,
 "tags"      : [ 
-                { "Key": "Name", "Value": "LiveOcean" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "liveocean-fcst" }
+                { "Key": "Name", "Value": "LiveOcean-node" },
+                { "Key": "Project", "Value": "NOS-cloud-sandbox" }
               ],
 "image_id"  : "ami-082e2e4e7ef1c6d77",
 "key_name"  : "rsa_sandbox_key",
