--- a/cloudflow/cluster/configs/NOS/nos.cora.cfg
+++ b/cloudflow/cluster/configs/NOS/nos.cora.cfg
@@ -2,11 +2,10 @@
 "platform"  : "AWS",
 "region"    : "us-east-2",
 "nodeType"  : "hpc6a.48xlarge",
-"nodeCount" : 2,
+"nodeCount" : 1,
 "tags"      : [ 
-                { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "liveocean-fcst" }
+                { "Key": "Name", "Value": "CORA-node" },
+                { "Key": "Project", "Value": "NOS-cloud-sandbox" }
               ],
 "image_id"  : "ami-082e2e4e7ef1c6d77",
 "key_name"  : "rsa_sandbox_key",
